--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
-  "name": "api_ecom",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "author": "Vincent Fourcroy",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cloudinary": "^1.41.2",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.2",
-    "validator": "^13.11.0"
-  }
+	"name": "api_ecom",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"start": "nodemon server.js",
+		"test": "cross-env NODE_ENV=test jest --testTimeout=5000"
+	},
+	"jest": {
+		"testEnvironment": "node"
+	},
+	"author": "Vincent Fourcroy",
+	"license": "ISC",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.20.2",
+		"cloudinary": "^1.41.2",
+		"cors": "^2.8.5",
+		"cross-env": "^7.0.3",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.3.1",
+		"express": "^4.18.2",
+		"express-validator": "^7.0.1",
+		"jsonwebtoken": "^9.0.2",
+		"mongodb": "^6.3.0",
+		"mongoose": "^8.0.3",
+		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.8",
+		"nodemon": "^3.0.2",
+		"validator": "^13.11.0"
+	},
+	"devDependencies": {
+		"jest": "^29.7.0",
+		"supertest": "^6.3.4"
+	}
 }
